# molbo

./: .gitignore  README.md  pyproject.toml  run_bo.py
configs/: comparison_1d.yaml  experiment.yaml
configs/acquisition/: ei.yaml  ucb.yaml
configs/experiments/1d/: ei_vs_ucb_1d.yaml
configs/model/: gp.yaml  tanimoto_gp.yaml
configs/oracle/: gaussian_mixture.yaml
experiments/baselines/: run_baseline.py  run_experiment.sh
molbo/: bo_loop.py  viz.py
molbo/acquisition/: __init__.py  base.py  expected_improvement.py  random.py  ucb.py
molbo/bo/: __init__.py  bo_loop.py  bo_metrics.py
molbo/data/: README.md  __init__.py  results_benchmark.csv
molbo/models/: __init__.py  base.py  bayesian_ridge.py  gp.py  random_model.py
molbo/oracle/: __init__.py  analytic.py  base.py  lookup.py  test_functions.py
molbo/oracles/: analytic.py  lookup.py  test_functions.py
molbo/utils/: __init__.py  acquisition.py  al_loop.py  embeddings.py  functions.py  logger.py  utils.py  viz.py
notebooks/: botorch_1.ipynb  botorch_2.ipynb  botorch_3.ipynb  botorch_4.ipynb  sampling.ipynb
src/mfal/acquisition/: ucb.py
src/mfal/models/: base.py  bayesian_ridge.py  gp.py  random_model.py
src/mfal/utils/: al_loop.py
