[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molbo"
version = "0.1.0"
description = "Bayesian optimization for molecules"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pandas",
    "rdkit",
    "torch",
    "gauche",
    "gpytorch",
    "botorch",
    "tqdm",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
]

[tool.setuptools.packages.find]
include = ["molbo*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
lint.select = [
  "E", "W",  # pycodestyle
  "F",       # Pyflakes
  "I",       # isort
]
lint.ignore = [
  "E501",    # Line too long -- let black handle it
  "E731",    # Lambda expressions -- we allow these
]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true
ignore_missing_imports = true
